[tool.poetry]
name = "simple-local-rag"
version = "0.1.0"
description = ""
authors = ["Adrian del Ser <adrian.delser@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymupdf = "^1.24.1"
matplotlib = "^3.8.4"
mlx-embedding-models = "^0.0.7"
protobuf = "^5.26.1"
mlx-lm = "^0.10.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
